--- a/stylesheets/concrete0.2.css
+++ b/stylesheets/concrete0.2.css
@@ -9,13 +9,14 @@
     box-sizing: border-box;
 }
 
-/*Constants */
-
-
 /*GRId SySTEM */
 
 /*max width set here */
-.row{max-width: 1000px;margin: 0 auto;}
+.row{
+  max-width: 1000px;
+  margin: 0 auto;
+  border: 1px solid black;
+}
 
 /* For mobile phones: */
 [class*="col-"] {
@@ -68,5 +69,14 @@
 @media only screen and (orientation: landscape) {
     body {
     /* Include CSS code here*/
+
     }
 }
+
+/*Constants */
+/* FEEL FREE TO REMOVE THIS SECTION, it contains styles for the examples in index.html*/
+.center{text-align:center;}
+body{
+  font-family: 'Montserrat', sans-serif;
+}
+footer{font-size: 0.7em;}
